# SLAM_10-25

./: .editorconfig  .envrc  .gitignore  LICENSE  Makefile  README.md  colcon-defaults.yaml
.cascade/: quick_reference.md  rules.md  session_prompt.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.windsurf/: allow_deny.yaml  cascade_config.json
.windsurf/rules/: general_rules.md  ros_rules.md
.windsurf/state/: init_done.json
Notes/: 00_README.md  AGENTIC_PROGRAMMING_GUIDE.md  Educational_Journal.md  NEXT_SESSION_PLAN.md  NEXT_SESSION_QUICK_START.md  PHASE_4_PART2_PLAN.md  PROJECT_DESIGN.md  PROJECT_ROADMAP.md  README.md  README_NOTES.md  RENAMING.md  SESSION_LOGS.md  TECHNICAL_NOTES.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  cascade_prompt.txt  cascade_slam_prompt.txt  template_instance.yaml
Notes/Archive/: ALGORITHM_NOTES.md  CHANGELOG.md  DEVELOPMENT_LOG.md  PROJECT_DESIGN.md  PROJECT_PLAN.md  VERSION_CONTROL_GUIDE.md  cascade_prompt.txt
Notes/Resources/: Traj_9-26-25.md
ros2_ws/: .gitignore  README.md
ros2_ws/src/ekf_slam/: CMakeLists.txt  package.xml
ros2_ws/src/ekf_slam/include/ekf_slam/: ekf_slam.hpp  landmark_extractor.hpp
ros2_ws/src/ekf_slam/src/: ekf_slam.cpp  ekf_slam_node.cpp  landmark_extractor.cpp
ros2_ws/src/hector_slam_custom/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/hector_slam_custom/include/hector_slam_custom/: ekf_filter.hpp  hector_slam_processor.hpp  map_manager.hpp  scan_matcher.hpp  tf2_compatibility.hpp
ros2_ws/src/hector_slam_custom/launch/: static_test.launch.py  test_slam.launch.py
ros2_ws/src/hector_slam_custom/scripts/: monitor_slam.py  test_slam.sh
ros2_ws/src/hector_slam_custom/src/: ekf_filter.cpp  hector_slam_node.cpp  hector_slam_processor.cpp  map_manager.cpp  map_manager_old.cpp  odom_simulator.cpp  scan_matcher.cpp  static_scan_publisher.cpp
ros2_ws/src/occupancy_grid_generator/: CMakeLists.txt  package.xml
ros2_ws/src/occupancy_grid_generator/config/: occupancy_grid_params.yaml  occupancy_grid_rviz.rviz
ros2_ws/src/occupancy_grid_generator/include/occupancy_grid_generator/: occupancy_grid_generator.hpp  occupancy_grid_generator_simple.hpp
ros2_ws/src/occupancy_grid_generator/launch/: occupancy_grid_generator.launch.py  simulation_demo.launch.py
ros2_ws/src/occupancy_grid_generator/src/: fake_scan_publisher.cpp  occupancy_grid_generator.cpp  occupancy_grid_generator_node.cpp  occupancy_grid_generator_simple.cpp  occupancy_grid_generator_simple_node.cpp
ros2_ws/src/occupancy_grid_generator/test/: test_occupancy_grid_generator.cpp
ros2_ws/src/template_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/template_pkg/launch/: pub_sub.launch.py  talker.launch.py
ros2_ws/src/template_pkg/src/: listener.cpp  talker.cpp
ros2_ws/src/visual_slam_ros/: README.md  TROUBLESHOOTING.md  package.xml  setup.cfg  setup.py
ros2_ws/src/visual_slam_ros/launch/: rtabmap_d455.launch.py
ros2_ws/src/visual_slam_ros/visual_slam_ros/: adaptive_feature_selector.py  feature_detector_node.py  feature_quality_monitor.py
scripts/: build.sh  clean.sh  create_pkg.sh  doctor.sh  init.sh  run_pubsub.sh  verify.sh
scripts/visual_slam/: launch_rtabmap_d455.py  start_visual_slam.sh
